--- a/index.html
+++ b/index.html
@@ -10,23 +10,27 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="player">
-    	<div>Name: <span class="name"></span></div>
-    	<div>Class: <span class="type"></span></div>
-    	<div>Exp: <span class="exp"></span></div>
-    	<div>Score: <span class="score"></span></div>
-    	<div>Level: <span class="level"></span></div>
-    	<div>Wins: <span class="wins"></span></div>
-    	<div>Loses: <span class="loses"></span></div>
+    <div id="watch">
+        <div class="screen">
+            <div id="player" class="table_text">
+            	<div><label>Name: </label><span class="name"></span></div>
+            	<div><label>Class: </label><span class="type"></span></div>
+            	<div><label>Exp: </label><span class="exp"></span></div>
+            	<div><label>Score: </label><span class="score"></span></div>
+            	<div><label>Level: </label><span class="level"></span></div>
+            	<div><label>Battles: </label><span class="battles"></span></div>
+            </div>
+            <div style="padding: 15px 0px;  text-align: center;">
+
+            <span id="fightButton" >Melee Attack</span>
+
+            <span id="fightButton2" >Magic Attack</span>
+        	</div>
+            <div id="battleLog" class="table_text"></div>
+        </div>
     </div>
-    <div style="padding: 15px; ">
 
-    <span id="fightButton" style="display:none; padding: 5px; margin: 5px; border:1px solid #ff0000; width: 80px; cursor: pointer; background: #cfcfcf; ">Melee Attack</span>
-
-    <span id="fightButton2" style="display:none; padding: 5px; margin: 5px;  border:1px solid #ff0000; width: 80px; cursor: pointer; background: #cfcfcf; ">Magic Attack</span>
-	</div>
-
-    <div id="battleLog"></div>
+    
 </div>
 <div id="debug"></div>
 </body>
