stop auto battles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     
 </div>
-<span id="fightButton3" >Auto Attack</span>
+<span id="fightButton3" >Auto Attack</span> <span id="fightButton4" >Stop Auto Attack</span>
 <div id="debug"></div>
 </body>
 </html>
