--- a/index.html
+++ b/index.html
@@ -2,37 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>AppleWatchGame</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script type="text/javascript" src="js/functions.js" ></script>
-	<script type="text/javascript" src="js/game.js" ></script>
+    <title>ksupipr git page</title>
 </head>
 <body>
 <div id="wrapper">
-    <div id="watch">
-        <div class="screen">
-            <div id="player" class="table_text">
-            	<div><label>Name: </label><span class="name"></span></div>
-            	<div><label>Class: </label><span class="type"></span></div>
-            	<div><label>Exp: </label><span class="exp"></span></div>
-            	<div><label>Score: </label><span class="score"></span></div>
-            	<div><label>Level: </label><span class="level"></span></div>
-            	<div><label>Battles: </label><span class="battles"></span></div>
-            </div>
-            <div style="padding: 15px 0px;  text-align: center;">
-
-            <span id="fightButton" >Melee Attack</span>
-
-            <span id="fightButton2" >Magic Attack</span>
-        	</div>
-            <div id="battleLog" class="table_text"></div>
-        </div>
-    </div>
-
-    
+   ... loading (no)
 </div>
-<span id="fightButton3" >Auto Attack</span> <span id="fightButton4" >Stop Auto Attack</span>
-<div id="debug"></div>
 </body>
 </html>
