--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ksupipr git page</title>
 </head>
 <body>
-<div id="wrapper">
+<div id="wrapper" style="text-align:center;">
    ... loading (no)
 </div>
 </body>
