--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="wrapper" style="text-align:center;">
-   ... loading (no)
+   ... <a href="https://t.me/ksupipr">@ksupipr</a>
 </div>
 </body>
 </html>
