контакты обновил, красоты навел

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="favicon.ico"/>
-    <title>ksupipr git page</title>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="i/favicon.ico">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Mikhail Bogatyrev ak ksupipr</title>
 </head>
 <body>
-<div id="wrapper" style="text-align:center;">
-   ... <a href="https://t.me/ksupipr">@ksupipr</a>
-</div>
+    <div id="wrapper">
+        <ul class="adress">
+            <li class="adress__line">
+                <img src="i/icon200/linkedin.png" class="adress__lineIcon" />
+                <a href="https://www.linkedin.com/in/michaelbogatyrev">Michael Bogatyrev</a>
+            </li>
+            <li class="adress__line">
+                <img src="i/icon200/telegram.png" class="adress__lineIcon" />
+                <a href="https://t.me/ksupipr">@ksupipr</a>
+            </li>
+            <li class="adress__line">
+                <img src="i/icon200/yandex.png" class="adress__lineIcon" />
+                <a href="mailto:ksupipr@yandex.ru?subject=Hello from github&body=Hello Mikhail.">ksupipr@yandex.ru</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
