--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="i/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
-    <title>Mikhail Bogatyrev ak ksupipr</title>
+    <title>Michael Bogatyrev ak ksupipr</title>
 </head>
 <body>
     <div id="wrapper">
@@ -19,7 +19,7 @@
             </li>
             <li class="adress__line">
                 <img src="i/icon200/yandex.png" class="adress__lineIcon" />
-                <a href="mailto:ksupipr@yandex.ru?subject=Hello from github&body=Hello Mikhail.">ksupipr@yandex.ru</a>
+                <a href="mailto:ksupipr@yandex.ru?subject=Hello from github&body=Hello Michael.">ksupipr@yandex.ru</a>
             </li>
         </ul>
     </div>
