Update share.html to remove module type from script tag

--- a/share.html
+++ b/share.html
@@ -8,7 +8,7 @@
   <script src="js/share.js"></script>
 </head>
 <body>
-    <script type="module">
+    <script>
       const shareImg = async () => {
         const response = await fetch('https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png');
         const blob = await response.blob();
