Fix selector for screen element in share.html to use ID for accurate targeting

--- a/share.html
+++ b/share.html
@@ -12,7 +12,7 @@
       let screen;
       const showScreen = (text) => {
         if (!screen) {
-          screen = document.querySelector('screen');
+          screen = document.querySelector('#screen');
         }
         screen.innerHTML = text;
       }
